# keyboard_monitor_app

./: README.md  requirements.txt  setup.cfg
keyboard_monitor/: __init__.py  key_combo_monitor.py  keyboard_monitor.py  main.py  models.py  recorder.py
tests/: test_keyboard_monitor.py  test_keycombo_monitor.py  test_recorder.py
