[metadata]
name = keyboard_monitor_app
# version = 0.0
author = hmasdev
author_email = hmasuidev1com@gmail.com
description = Keyboard Monitor App is a Python package that allows monitoring and recording key combinations pressed on the keyboard. It uses the pynput library to listen for keyboard events.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmasdev/keyboard_monitor_app
license_files = LICENSE
keywords = 
    typing
    keyboard
    monitoring
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    click
    pydantic
    pynput
    types-pynput

[options.packages.find]
exclude =
    tests*
